feat: initial JBang configuration for easier use